--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,31 @@
+@charset 'UTF-8';
+
+// 1. Configuration and helpers
+@import
+  'abstracts/variables',
+  'abstracts/functions',
+  'abstracts/mixins';
+
+// 2. Vendors
+@import
+  '~bootstrap/scss/bootstrap.scss';
+
+
+// 3. Base stuff
+@import
+  'base/fonts',
+  'base/typography',
+  'base/helpers',
+  'base/base';
+
+// 5. Components
+
+// 4. Layout-related sections
+ 
+// 6. Page-specific styles
+
+
+
 body {
   background: blue;
 }
