fix abse problems

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,7 @@
 
 // 2. Vendors
 @import
-  '~bootstrap/scss/bootstrap.scss';
+  '~bootstrap/scss/bootstrap';
 
 
 // 3. Base stuff
@@ -26,6 +26,6 @@
 
 
 
-body {
-  background: blue;
-}
+// body {
+//   background: blue;
+// }
